force-app/main/default/objects/ObjectLangVersion__c/ObjectLangVersion__c.object-meta.xml
<CustomObject>
    <label>Object Lang Version</label>
    <nameField>
        <label>SObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objects Lang Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>