force-app/main/default/objects/ObjectLangVersion__c/fields/LangValue__c.field-meta.xml
<CustomField>
    <fullName>LangValue__c</fullName>
    <label>LangValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>