force-app/main/default/objects/ObjectLangVersion__c/fields/Lng__c.field-meta.xml
<CustomField>
    <fullName>Lng__c</fullName>
    <label>Lng</label>
    <length>2</length>
    <type>Text</type>
</CustomField>