force-app/main/default/objects/ObjectLangVersion__c/fields/LngExtKey__c.field-meta.xml
<CustomField>
    <fullName>LngExtKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>LngExtKey</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>