force-app/main/default/objects/ObjectLangVersion__c/fields/ObjRecId__c.field-meta.xml
<CustomField>
    <fullName>ObjRecId__c</fullName>
    <label>ObjRecId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>