force-app/main/default/objects/ObjectLangVersion__c/fields/ProdCharacteristics__c.field-meta.xml
<CustomField>
    <fullName>ProdCharacteristics__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Characteristics</label>
    <referenceTo>ProductCharacteristics__c</referenceTo>
    <relationshipLabel>Objects Lang Versions</relationshipLabel>
    <relationshipName>Objects_Lang_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>