force-app/main/default/objects/ObjectLangVersion__c/fields/RecordLink__c.field-meta.xml
<CustomField>
    <fullName>RecordLink__c</fullName>
    <formula>HYPERLINK(&apos;https://interpipe--devsand.sandbox.lightning.force.com/lightning/r/&apos;+Name+&apos;/&apos;+ObjRecId__c+&apos;/view&apos;,&apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Link</label>
    <type>Text</type>
</CustomField>