force-app/main/default/objects/ObjectLangVersion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ObjRecId__c</columns>
    <columns>Lng__c</columns>
    <columns>LangValue__c</columns>
    <columns>RecordLink__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>